GridClassKey 1.0.1
=================================================
- [#97] Fix MODX version comparing issues

GridClassKey 1.0.1-beta2 (July 14, 2014)
=================================================
- [#76] fix bug on dragging fields brings back description field and removes output filters and titles
- [#79] fix compatibility adjustment for action's value on 2.3.0+
- [#89] Field Order bug
- [#94] Add permissions for containers
- [#95] fix error when context_key is not in the list of fields to show in the child list

GridClassKey 1.0.1-beta1 (July 4, 2014)
=================================================
- [#81] AJAX loop for actions
- [#82][#92] Give limit option for number of children to revert grid to tree.
- [#79] Compatibility adjustment for action's value on 2.3.0+

GridClassKey 1.0.0-pl (April 21, 2014)
=================================================
- bugfix missed compress JS checking
- add gridclasskey.mgr_css to system settings
- [#73] fix custom output filters for TV fields
- [#42] Option to hide bulk action button and advanced search
- fix saving on CMP

GridClassKey 1.0.0-rc5 (April 17, 2014)
=================================================
- [#70] fix inline editing that breaks parsed TV 
- [#67][#71] condition to avoid breaking JS because of compress_css and compress_js

GridClassKey 1.0.0-rc4 (April 15, 2014)
=================================================
- [#55] Problem with drag-drop and menuindex direction on reverse order
- [#65] Add snippet field
- [#58] Setting to change amount of rows shown by default 
- [#59] Add typeahead to Add TV Field combo box
- add "Reset" button on setting's grid
- add Properties field for new child
- [#61][#62] enable TV updating on the grid
- [#56] revert the checkbox action
- [#57] typo on LIKE query
- fix dropdown menuindex sorting
- add version param when loading CSS and JS files
- fix Action's column width on FireFox
- [#53] Fix AjaxManager compatibility issues by @danyaPostfactum
